--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@ body{
   padding: 30px;
   color: #333;
   background-color: rgb(107, 90, 123);
+  margin: 0;
+  padding: 10px;
 
 }
 
@@ -99,4 +101,19 @@ input, select {
 
 .filter-options div{
  flex: 1 1 0;
+}
+
+
+.back{
+  background-color: #fff;
+  color: black;
+  font-size: 2rem;
+  margin-bottom: 10px;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+ justify-content: center;
+ align-items: center;
+ cursor: pointer;
 }
